--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
 
     <uses-permission android:name="android.permission.BLUETOOTH"/>
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
         android:name="com.example.justinchou.cheyilian.CheyilianApplication"
@@ -14,7 +16,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.BindActivity">
+        <activity android:name=".activity.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,6 +24,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.StartActivity"/>
+        <activity android:name=".activity.BindActivity"/>
         <activity android:name=".activity.CarStateActivity" android:launchMode="singleTask"/>
         <activity android:name=".activity.SettingActivity"/>
         <activity android:name=".activity.ProfileActivity"/>
