--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,11 +25,14 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activity.LoginActivity"
-            android:theme="@style/Theme.AppCompat.NoActionBar"/>
-        <activity android:name=".activity.MyTabActivity"/>
+            android:name=".activity.LoginActivity"/>
+        <activity
+            android:name=".activity.MyTabActivity"/>
         <activity android:name=".activity.BindActivity"/>
-        <activity android:name=".activity.CarStateActivity" android:launchMode="singleTask"/>
+        <activity
+            android:name=".activity.CarStateActivity"
+            android:launchMode="singleTask"
+            android:theme="@style/Theme.AppCompat.NoActionBar"/>
         <activity android:name=".activity.SettingActivity"/>
         <activity android:name=".activity.ProfileActivity"/>
         <service android:name=".service.BluetoothLeService" android:enabled="true"/>
